Changelog
=========

1.0.2 (unreleased)
------------------

- Added a parameter to stop migration after n contents migrated.


1.0.1 (2012-09-03)
------------------

- Fixed run profile.


1.0 (2012-08-24)
----------------

- Package created using templer
  []